# stm32f3xx-hal

./: CHANGELOG.md  Cargo.toml
.cargo/: config.toml
examples/: adc.rs  can.rs  gpio_erased.rs  i2c_scanner.rs  pwm.rs  serial_dma.rs  spi-fix.rs  spi.rs  usb_serial.rs
src/: adc.rs  can.rs  gpio.rs  i2c.rs  lib.rs  macros.rs  pwm.rs  rcc.rs  serial.rs  spi.rs  timer.rs  usb.rs
testsuite/: Cargo.toml
testsuite/.cargo/: config
testsuite/tests/: test.rs
