[package]
name = "testsuite"
authors = ["stm32xx-hal dev's"]
edition = "2018"
version = "0.1.0"
publish = false

[[test]]
name = "test"
harness = false

[dependencies.defmt]
git = "https://github.com/knurling-rs/defmt"
branch = "main"
# rev = "2cd30042"

[dependencies.defmt-rtt]
git = "https://github.com/knurling-rs/defmt"
branch = "main"
# rev = "2cd30042"

[dependencies.defmt-test]
git = "https://github.com/knurling-rs/defmt-test"
branch = "main"
# rev = "d8915967"

[dependencies.panic-probe]
git = "https://github.com/knurling-rs/probe-run"
branch = "main"

[dependencies]
stm32f3xx-hal = { path = ".." , features = ["rt", "stm32f303xc", "can", "stm32-usbd"]}
cortex-m = "0.6.3"
cortex-m-rt = "0.6.12"

[features]
default = [
  "defmt-trace",
]

defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
